# W11ASI

./: CMakeLists.txt  README.md  sources.cmake
.github/workflows/: release.yml
scripts/: .gitignore  install.bat  shutdown.bat  uninstall.bat
src/w11asi/: main.c  w11asi.rc
